@@ -1,3 +1,8 @@
+2005-09-28 23:37  hjanuschka
+
+	* ChangeLog, Makefile, src/sched.c, trigger/jabber.sh: [no log
+	  message]
+
 2005-09-27 21:39  hjanuschka
 
 	* src/: trigger.c, client/agent.c: trigger timeout agent local
